# portfolio-tracker

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  MERGE_CHECKLIST.md  PORTFOLIO_TRACKER_BUILD_PLAN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.githooks/: post-merge  pre-commit  pre-push
.github/: dependabot.yml  setup-branch-protection.sh
.github/workflows/: ci.yml  release.yml
agent-prompts/: AGENT_1_SCAFFOLD_AND_BACKEND.md  AGENT_2_FRONTEND_SHELL_AND_DASHBOARD.md  AGENT_3_HOLDINGS_AND_PERFORMANCE.md  AGENT_4_STRESS_TEST.md  AGENT_CICD_SETUP.md
docs/: ARCHITECTURE.md  analysis-2026-03-22.md  features.md  releases.md  roadmap.md
e2e/: dashboard.spec.ts  holdings.spec.ts  navigation.spec.ts  settings.spec.ts  stress-test.spec.ts
frontend/: App.tsx  index.css  main.tsx
frontend/__tests__/: SymbolSearch.test.tsx
frontend/components/: AccountsModal.tsx  ActionCenter.tsx  AddHoldingModal.tsx  AddTransactionModal.tsx  Alerts.tsx  Analytics.tsx  Dashboard.tsx  Dividends.tsx  Help.tsx  Holdings.tsx  ImportHoldingsModal.tsx  KeyboardShortcutsOverlay.tsx  Layout.tsx  Performance.tsx  PresetScenarioSelector.tsx  Rebalance.tsx  ResilienceSummary.tsx  ScenarioComparison.tsx  Settings.tsx  ShockSliders.tsx  Sidebar.tsx  StressResultsTable.tsx  StressTest.tsx  TopBar.tsx  TransactionHistory.tsx
portfolio-mcp/: Cargo.toml  README.md
portfolio-mcp/src/: db.rs  main.rs  snapshot.rs  stress.rs  types.rs
portfolio-mcp/src/tools/: alerts.rs  config.rs  holdings.rs  mod.rs  portfolio.rs  stress.rs  transactions.rs
scripts/: bump-version.sh  install-hooks.sh
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial_schema.sql  0002_price_cache_columns.sql  0003_symbol_fundamentals.sql  0004_holding_fields.sql  0005_accounts_add_cash_type.sql  0006_price_alert_currency.sql  0007_add_missing_indexes.sql  0008_add_db_constraints.sql  0009_soft_delete.sql  0010_uppercase_symbols.sql
src-tauri/src/: analytics.rs  commands.rs  commands_tests.rs  config.rs  csv.rs  db.rs  error.rs  fx.rs  lib.rs  portfolio.rs  price.rs  search.rs  stress.rs  types.rs
src-tauri/src/commands/: accounts.rs  alerts.rs  analytics.rs  backup.rs  config.rs  dividends.rs  import.rs  mod.rs  portfolio.rs  prices.rs  stress.rs  transactions.rs
(+136 files in other folders)
