[package]
name = "portfolio-tracker"
version = "0.1.0-2"
description = "Portfolio Tracker"
authors = []
edition = "2021"

[lib]
name = "portfolio_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.39", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
csv = "1.3"
